[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cachly-agents"
version = "0.2.0"
description = "cachly.dev adapters for LangChain, AutoGen & CrewAI – persistent memory, semantic long-term memory, and semantic cache for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "cachly.dev", email = "dev@cachly.dev"}]
keywords = ["cache", "langchain", "autogen", "crewai", "ai", "llm", "redis", "semantic-cache", "semantic-memory", "pgvector"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "cachly>=0.1.0",
    "redis>=5.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
autogen = ["pyautogen>=0.2.0"]
crewai = ["crewai>=0.30.0"]
all = ["langchain-core>=0.2.0", "pyautogen>=0.2.0", "crewai>=0.30.0"]

[project.urls]
Homepage = "https://cachly.dev"
Repository = "https://github.com/cachly-dev/sdk-python-agents"
Documentation = "https://cachly.dev/docs/agents"

